// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tag matches snapshot correctly 1`] = `
<div
  class="brd-c-gsZMAK brd-c-gsZMAK-jhuSHf-size-md brd-c-gsZMAK-kNKPai-color-primary"
>
  test
</div>
`;

exports[`tagGroup matches snapshot correctly 1`] = `
<div
  class="brd-c-gsZMAK brd-c-gsZMAK-euzDcH-size-lg brd-c-gsZMAK-kNKPai-color-primary"
>
  Abc
</div>
`;
